--- a/app/src/main/res/layout/activity_proof_setup_one.xml
+++ b/app/src/main/res/layout/activity_proof_setup_one.xml
@@ -61,6 +61,6 @@
         android:layout_marginTop="20dp"
         android:clickable="false"
         android:text="@string/next"
-        android:textColor="@color/gray"
+        android:textColor="@color/text_gray"
         android:textSize="18sp"/>
 </LinearLayout>
