--- a/app/src/main/res/layout/dialog_add_black_num.xml
+++ b/app/src/main/res/layout/dialog_add_black_num.xml
@@ -24,7 +24,7 @@
             android:text="13522410381"
             android:hint="@string/black_num_hint"
             android:inputType="phone"
-            android:textColor="@color/gray"/>
+            android:textColor="@color/text_gray"/>
     </LinearLayout>
 
     <LinearLayout
