--- a/app/src/main/res/layout/dialog_reset_safe_num.xml
+++ b/app/src/main/res/layout/dialog_reset_safe_num.xml
@@ -24,7 +24,7 @@
             android:id="@+id/et_new_safeNum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/gray"
+            android:textColor="@color/text_gray"
             android:inputType="phone"/>
     </LinearLayout>
 
