--- a/app/src/main/res/layout/fragment_app_mgr.xml
+++ b/app/src/main/res/layout/fragment_app_mgr.xml
@@ -47,8 +47,18 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/app_recyclerView"
-            android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_app_list_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/appListColor"
+            android:paddingLeft="10dp"
+            android:text="用户程序(20)"
+            android:textColor="@color/white"
+            android:textSize="16sp"/>
     </FrameLayout>
 </LinearLayout>
