--- a/app/src/main/res/layout/fragment_app_mgr.xml
+++ b/app/src/main/res/layout/fragment_app_mgr.xml
@@ -56,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/appListColor"
+            android:visibility="invisible"
             android:paddingLeft="10dp"
             android:text="用户程序(20)"
             android:textColor="@color/white"
