--- a/app/src/main/res/layout/activity_simple_setting.xml
+++ b/app/src/main/res/layout/activity_simple_setting.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"/>
 
     <LinearLayout
-        android:id="@+id/ll_open_proof"
+        android:id="@+id/ll_open_service"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_selector"
@@ -18,19 +18,15 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/tv_service_title"
+            android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="@string/open_proof_service"
             android:textColor="@color/textColor"
             android:textSize="18sp"/>
-        <!--Switch
-            android:id="@+id/open_proof"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"/-->
 
         <com.wjustudio.phoneManager.lib.switchButton.SwitchButton
             android:id="@+id/sb_md"
@@ -40,6 +36,7 @@
             android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
