--- a/app/src/main/res/layout/activity_applock.xml
+++ b/app/src/main/res/layout/activity_applock.xml
@@ -24,11 +24,12 @@
 
     <EditText
         android:id="@+id/et_applock_password"
-        android:layout_margin="20dp"
+        android:layout_margin="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:hint="请输入解锁密码"
+        android:textColor="@color/text_gray"
         android:inputType="textPassword"
         android:textSize="25sp" />
 
