--- a/app/src/main/res/layout/activity_proof_setting.xml
+++ b/app/src/main/res/layout/activity_proof_setting.xml
@@ -51,9 +51,10 @@
         android:clickable="true"
         android:background="@drawable/btn_selector">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/change_safe_num"
@@ -64,7 +65,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@mipmap/arrow_right"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -77,9 +79,10 @@
         android:clickable="true"
         android:background="@drawable/btn_selector">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/change_pwd"
@@ -90,7 +93,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@mipmap/arrow_right"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
