--- a/app/src/main/res/layout/activity_simple_setting.xml
+++ b/app/src/main/res/layout/activity_simple_setting.xml
@@ -34,7 +34,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"/>
+    </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divide_line_color"/>
+
+    <LinearLayout
+        android:id="@+id/ll_setting_one"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:visibility="gone"
+        android:background="@drawable/btn_selector">
+        <TextView
+            android:id="@+id/tv_setting_one_text"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textColor="@color/textColor"
+            android:textSize="18sp"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@mipmap/arrow_right"
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"/>
     </LinearLayout>
 
     <View
