--- a/app/src/main/res/layout/activity_process_mgr.xml
+++ b/app/src/main/res/layout/activity_process_mgr.xml
@@ -1,10 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
     <com.wjustudio.phoneManager.widgt.CommonTitleLayout
         android:id="@+id/ctl_common_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_phone_remain"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="进程数：1"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/tv_sd_remain"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="可用/总内存：0.9G/2.66GB"
+            android:layout_weight="2"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/ll_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="正在加载应用信息..."/>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/app_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_app_list_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/appListColor"
+            android:paddingLeft="10dp"
+            android:text="用户进程(20)"
+            android:textColor="@color/white"
+            android:textSize="16sp"/>
+    </FrameLayout>
 
 </LinearLayout>
