--- a/app/src/main/res/layout/activity_process_mgr.xml
+++ b/app/src/main/res/layout/activity_process_mgr.xml
@@ -15,25 +15,24 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_phone_remain"
+            android:id="@+id/tv_progress_num"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="进程数：1"
             android:gravity="center"/>
 
         <TextView
-            android:id="@+id/tv_sd_remain"
+            android:id="@+id/tv_progress_rate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="可用/总内存：0.9G/2.66GB"
             android:layout_weight="2"
             android:gravity="center"/>
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/ll_loading"
@@ -49,17 +48,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="正在加载应用信息..."/>
+                android:text="正在加载进程信息..."/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/app_recyclerView"
+            android:id="@+id/progress_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="invisible"/>
 
         <TextView
-            android:id="@+id/tv_app_list_title"
+            android:visibility="invisible"
+            android:id="@+id/tv_progress_list_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/appListColor"
@@ -69,4 +69,50 @@
             android:textSize="16sp"/>
     </FrameLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/btn_select_all"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/selector_taskbtn_color"
+            android:text="全选"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_select_reverse"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/selector_taskbtn_color"
+            android:text="反选"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_clear"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/selector_taskbtn_color"
+            android:text="清理"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_hide_progress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/selector_taskbtn_color"
+            android:text="隐藏"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+    </LinearLayout>
 </LinearLayout>
