--- a/app/src/main/res/layout/activity_progress_mgr.xml
+++ b/app/src/main/res/layout/activity_progress_mgr.xml
@@ -19,12 +19,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#000000"
+            android:padding="2dp"
             android:gravity="center"/>
 
         <TextView
             android:id="@+id/tv_progress_rate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:textColor="#000000"
             android:layout_weight="2"
             android:gravity="center"/>
     </LinearLayout>
@@ -58,7 +62,6 @@
             android:visibility="invisible"/>
 
         <TextView
-            android:visibility="invisible"
             android:id="@+id/tv_progress_list_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,14 +69,15 @@
             android:paddingLeft="10dp"
             android:text="用户进程(20)"
             android:textColor="@color/white"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:visibility="invisible"/>
     </FrameLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_select_all"
@@ -83,7 +87,7 @@
             android:background="@drawable/selector_taskbtn_color"
             android:text="全选"
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
         <Button
             android:id="@+id/btn_select_reverse"
@@ -93,7 +97,17 @@
             android:background="@drawable/selector_taskbtn_color"
             android:text="反选"
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
+
+        <Button
+            android:id="@+id/btn_cancel_progress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/selector_taskbtn_color"
+            android:text="取消"
+            android:textColor="#ffffff"
+            android:textSize="18sp"/>
 
         <Button
             android:id="@+id/btn_clear"
@@ -103,16 +117,8 @@
             android:background="@drawable/selector_taskbtn_color"
             android:text="清理"
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
-        <Button
-            android:id="@+id/btn_hide_progress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/selector_taskbtn_color"
-            android:text="隐藏"
-            android:textColor="#ffffff"
-            android:textSize="18sp" />
+
     </LinearLayout>
 </LinearLayout>
