--- a/app/src/main/res/layout/fragment_app_mgr.xml
+++ b/app/src/main/res/layout/fragment_app_mgr.xml
@@ -14,6 +14,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#000000"
             android:gravity="center"/>
 
         <TextView
@@ -21,6 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#000000"
             android:gravity="center"/>
     </LinearLayout>
 
