PhoneManager: 把进程管理的adapter合并到activity中，单个进程还不能清理
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/res/layout/activity_progress_mgr.xml
+++ b/app/src/main/res/layout/activity_progress_mgr.xml
@@ -89,7 +89,7 @@
             android:textColor="#ffffff"
             android:textSize="18sp"/>
 
-        <Button
+       <!-- <Button
             android:id="@+id/btn_select_reverse"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -97,7 +97,7 @@
             android:background="@drawable/selector_taskbtn_color"
             android:text="反选"
             android:textColor="#ffffff"
-            android:textSize="18sp"/>
+            android:textSize="18sp"/>-->
 
         <Button
             android:id="@+id/btn_cancel_progress"
