--- a/app/src/main/res/layout/activity_qr_code_scan.xml
+++ b/app/src/main/res/layout/activity_qr_code_scan.xml
@@ -1,25 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffe1e0de" >
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="扫描二维码" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffe1e0de">
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:lines="2"
-        android:gravity="center_horizontal"
         android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:textSize="26sp"/>
 
     <ImageView
         android:id="@+id/qrcode_bitmap"
