--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -16,27 +16,26 @@
 
     <TextView
         android:id="@+id/sp_tv_title"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="手机管理系统"
         android:textSize="40sp"
-        android:textColor="@color/white"/>
+        android:textColor="@android:color/holo_green_light"/>
     <TextView
         android:id="@+id/tv_splash_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="@color/white"
+        android:textColor="@color/text_gray"
         android:text="友情内测版"
-        android:textSize="24sp"
-        />
+        android:textSize="24sp"/>
 
     <ProgressBar
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@id/tv_splash_activity"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"/>
@@ -46,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/white"
+        android:textColor="@android:color/holo_green_light"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
         android:textSize="30sp"
