--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,51 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4381E8"
+    android:background="@color/primary_dark"
     >
-
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/sp_tv_title"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="手机管理系统"
         android:textSize="40sp"
-        android:textColor="@android:color/holo_green_light"/>
-    <TextView
-        android:id="@+id/tv_splash_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textColor="@color/text_gray"
-        android:text="友情内测版"
-        android:textSize="24sp"/>
-
-    <ProgressBar
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/tv_splash_activity"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"/>
-
+        android:textColor="@android:color/white"/>
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_marginTop="160dp"
+       android:layout_centerInParent="true"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@mipmap/ic_launcher"/>
     <TextView
         android:id="@+id/sp_tv_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textColor="@android:color/holo_green_light"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:textSize="30sp"
+        android:layout_marginBottom="80dp"
+        android:textSize="28sp"
         android:text="您的手机您做主"/>
+
+
 </RelativeLayout>
