--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,10 +20,10 @@
     <color name="gray">#66000000</color>
     <!-- switchButton-->
     <color name="ksw_md_ripple_normal">#1E000000</color>
-    <color name="ksw_md_ripple_checked">#327FC2</color>
+    <color name="ksw_md_ripple_checked">#4CAF50</color>
     <color name="ksw_md_solid_shadow">#33000000</color>
     <color name="ksw_md_solid_normal">#ECECEC</color>
-    <color name="ksw_md_solid_checked">#0087CD</color>
+    <color name="ksw_md_solid_checked">#8BC34A</color>
     <color name="ksw_md_solid_disable">#FFFFFF</color>
     <color name="ksw_md_solid_checked_disable">#aaaaaa</color>
 
