--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,30 +8,32 @@
 
     <TextView
         android:id="@+id/sp_tv_title"
-        android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
         android:text="手机管理系统"
-        android:textSize="40sp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:textSize="40sp"/>
+
     <ImageView
         android:id="@+id/icon"
-        android:layout_marginTop="160dp"
-       android:layout_centerInParent="true"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
         android:src="@mipmap/ic_launcher"/>
+
     <TextView
         android:id="@+id/sp_tv_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
-        android:textSize="28sp"
-        android:text="您的手机您做主"/>
+        android:text="您的手机您做主"
+        android:textColor="@android:color/white"
+        android:textSize="28sp"/>
 
 
 </RelativeLayout>
