--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -12,6 +12,7 @@
         android:layout_height="200dp"
         android:background="@color/primary"
         android:orientation="vertical">
+
         <com.wjustudio.phoneManager.widgt.CircleImageView
             android:id="@+id/iv_avatar"
             android:layout_width="60dp"
@@ -20,22 +21,24 @@
             android:contentDescription="@null"
             android:src="@mipmap/login_default_face"
             app:border_color="@color/white"
-            app:border_width="2dip" />
+            app:border_width="2dip"/>
 
         <TextView
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/iv_avatar"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:text="@string/login_out"
             android:textColor="@color/white"
-            android:layout_below="@id/iv_avatar"/>
+            android:textSize="20sp"/>
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,19 +55,8 @@
                 android:background="@color/divide_line_color"/>
 
             <TextView
-                android:id="@+id/tv_left_switch_model"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:clickable="true"
-                android:text="@string/switch_model"
-                android:textColor="@color/black"
-                android:textSize="18dp"/>
-
-            <TextView
                 android:id="@+id/tv_left_setting"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
@@ -72,7 +64,6 @@
                 android:textColor="@color/black"
                 android:textSize="18dp"/>
         </LinearLayout>
-
 
 
     </ScrollView>
