--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="appListColor">#66000000</color>
 
     <color name="gray">#66000000</color>
+    <color name="split_color">#12000000</color>
+
     <!-- switchButton-->
     <color name="ksw_md_ripple_normal">#1E000000</color>
     <color name="ksw_md_ripple_checked">#4CAF50</color>
