--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:fresco="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/mainLayout"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical">
@@ -37,9 +39,9 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="10dp"
             android:layout_marginTop="5dp"
-            android:background="@color/gray"/>
+            android:background="@color/split_color"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,13 +53,15 @@
             android:textColor="@android:color/black"
             android:textSize="20sp"/>
 
-        <com.wjustudio.phoneManager.widgt.CircleImageView
+
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_avatar"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
-            android:contentDescription="@null"
-            android:src="@mipmap/login_default_face"
+            fresco:roundAsCircle = "true"
+            fresco:placeholderImage="@mipmap/login_default_face"
             app:border_color="@color/white"
             app:border_width="2dip"/>
 
@@ -71,9 +75,9 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="10dp"
             android:layout_marginTop="5dp"
-            android:background="@color/gray"/>
+            android:background="@color/split_color"/>
 
         <TextView
             android:layout_width="wrap_content"
