--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -3,6 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              xmlns:fresco="http://schemas.android.com/apk/res-auto"
               android:background="@color/left_bg_color"
               android:orientation="vertical">
 
@@ -10,16 +11,15 @@
         android:id="@+id/rl_left_head"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/primary"
-        android:orientation="vertical">
+        android:background="@color/primary">
 
-        <com.wjustudio.phoneManager.widgt.CircleImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_avatar"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerInParent="true"
-            android:contentDescription="@null"
-            android:src="@mipmap/login_default_face"
+            fresco:roundAsCircle = "true"
+            fresco:placeholderImage="@mipmap/login_default_face"
             app:border_color="@color/white"
             app:border_width="2dip"/>
 
