--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -89,7 +89,7 @@
 
     <string-array name="left_menu_text">
         <item>二维码扫描</item>
-        <item>信息备份</item>
+        <item>通讯录备份</item>
         <item>归属地查询</item>
     </string-array>
 </resources>
