--- a/app/src/main/res/layout/activity_backup_information.xml
+++ b/app/src/main/res/layout/activity_backup_information.xml
@@ -9,9 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <WebView
-        android:id="@+id/wv_about_us"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/rv_my_back"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 </LinearLayout>
