--- a/app/src/main/res/layout/guid_view2.xml
+++ b/app/src/main/res/layout/guid_view2.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/primary">
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/pic_guidepage_2"/>
+        android:layout_marginTop="200dp"
+        android:gravity="center_horizontal"
+        android:text="软件越来越多？"
+        android:textColor="@color/white"
+        android:textSize="40sp"/>
 </LinearLayout>
