--- a/app/src/main/res/layout/item_left.xml
+++ b/app/src/main/res/layout/item_left.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.wjustudio.phoneManager.widgt.RevealLayout
+<LinearLayout
     android:id="@+id/item_home"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -26,4 +26,4 @@
         android:text="应用管理"
         android:textColor="@color/textColor"
         android:textSize="20sp"/>
-</com.wjustudio.phoneManager.widgt.RevealLayout>
+</LinearLayout>
