--- a/app/src/main/res/layout/activity_black_num.xml
+++ b/app/src/main/res/layout/activity_black_num.xml
@@ -12,8 +12,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/left_bg_color">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_black_num_remind"
