--- a/app/src/main/res/layout/fragment_app_mgr.xml
+++ b/app/src/main/res/layout/fragment_app_mgr.xml
@@ -5,6 +5,8 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_remain"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
