--- a/app/src/main/res/layout/activity_qr_code_scan.xml
+++ b/app/src/main/res/layout/activity_qr_code_scan.xml
@@ -3,6 +3,10 @@
                 android:layout_height="match_parent"
                 android:background="#ffe1e0de">
 
+    <com.wjustudio.phoneManager.widgt.CommonTitleLayout
+        android:id="@+id/ctl_common_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/result"
         android:layout_width="match_parent"
